--- a/Assets/reset.css
+++ b/Assets/reset.css
@@ -2,15 +2,12 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-size: 16px;
+  color: white;
 }
 
 html {
   height: 100%;
-}
-
-body {
-  line-height: 1;
-  font-family: sans-serif;
 }
 
 h1,
