--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,8 +1,3 @@
-* {
-  font-size: 16px;
-  color: white;
-}
-
 :root{
   --dark: black;
   --bordercolor: white;
@@ -11,37 +6,20 @@
 
 body{
   background-color: var(--dark);
-  width: 100%;
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
   min-height: 100%;
 }
 
-main{
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  padding-bottom: 0;
-  margin-bottom: 0;
-}
-
-
-
-h1, h2, a{
+h1, h2, h3{
   font-family: 'Poiret One', cursive;
   font-size: bold;
   letter-spacing: 2px;
 }
 
-a{
-  text-decoration: none;
-  color: white;
-  font-weight: bold;
-  transition: 500ms;
-}
-
-a:hover{
-  font-size: 20px;
+img{
+  display: block;
 }
 
 .herb-header{
@@ -50,7 +28,6 @@ a:hover{
   background-color: var(--dark);
   height: 50px;
   padding: 6px 0 6px 0;
-  /* border-bottom: 2px solid var(--bordercolor); */
 }
 
 .herb-header h1{
@@ -59,7 +36,7 @@ a:hover{
   font-size: 2rem;
   padding: 0 20px 0 40px;
   background-color: var(--bordercolor);
-  color: white;
+  color: black;
   border-radius: 0 4px 4px 0;
 }
 
@@ -73,7 +50,18 @@ a:hover{
 }
 
 .herb-header nav a{
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+  transition: 500ms;
+  font-family: 'Poiret One', cursive;
+  font-size: bold;
+  letter-spacing: 2px;
   padding-left: 10px;
+}
+
+.herb-header nav a:hover{
+  font-size: 20px;
 }
 
 .banner{
@@ -89,13 +77,18 @@ a:hover{
   background-size: 100%;
   filter: grayscale(100%);
   backdrop-filter: grayscale;
-  background-color: gray;
+  /* background-color: darkgrey;  */
   background-blend-mode: hard-light ;
+  overflow: hidden;
 }
 
 .banner img{
-  margin: auto;
-  border-radius: 10px;
+  display: block;
+  margin: 0 auto;
+  width: 310px;
+  height: 310px;
+  mix-blend-mode: luminosity ;
+  overflow: hidden; 
 }
 
 .banner p{
@@ -105,19 +98,18 @@ a:hover{
   bottom: 20px;
   background-color: var(--bordercolor);
   border-radius: 3px;
+  color: black;
+  font-family: 'Poiret One', cursive;
 }
 
 .about-me{
   position: relative;
-  display: flex;
-  flex-wrap: wrap;
   margin-top: 10px;
   width: 100%;
   min-height: 120px;
   margin-right: 20px;
-  overflow: scroll;
+  overflow: hidden;
 }
-
 
 .about-me div h1{
   position: absolute;
@@ -133,145 +125,211 @@ a:hover{
   right: 0;
   padding-left: 20px;
   width: 80%;
-  padding-right: 20px;
+  padding-right: 15px;
+  overflow: scroll;
+  height: 120px;
+  font-family: 'Times New Roman', Times, serif;
 }
 
 .work{
-  /* position: relative; */
-  /* margin-top: 10px; */
-  width: 100%;
+  position: relative;
+  margin-top: 10px;
+  max-width: 100%;
   height: 100%;
 }
 
+.work div{
+  width: 20%;
+}
+
 .work div h1{
-  position: absolute;
-  padding-right: 20px;
+  position: absolute; 
+  padding-right: 15px;
   font-size: 2rem;
   width: 20%;
   text-align: right;
+  padding-left: 20px;
 }
 
-.work-flex{
-  position: absolute;
+.work .work-flex{
+  margin-top: 10px;
   right: 0;
   padding: 0 20px 0 20px;
   display: flex;
-  align-content: center;
   flex-direction: row;
   flex-wrap: wrap;
   width: 80%;  
   border-left: 2px solid var(--bordercolor);
   gap: 5px;
-  /* margin-top: ; */
+  float:right;
+}
 
+.work-div a{
+  margin-top: 10px;
+  max-width: 100%;
+  height: 100%;
 }
 
 .work-div{
-  position: relative;
-  border: 2px solid var(--bordercolor);
-  width: 600px; 
+  border: 2px solid var(--bordercolor); 
+  border-radius: 5px;
 }
 
+.work-div:hover{
+  outline: none;
+  border-color: #dded9e;
+  box-shadow: 0 0 15px #aef226;
+}
 
 .project-1{
-  min-height: 600px;
-  flex:1 1 80%; 
+  min-height: 650px;
+  flex:1 1 80%;    
 }
 
 .project-1 img{
   width: 100%;
-  height: 600px;
+  height: 650px;
   object-fit: cover;
+  object-position: 0;
 }
 
 .project-1 div {
   position: absolute;
   background-color: rgba(0, 0, 0, 0.8);
-  padding: 10px 20px 10px 20px;
-  margin-top: 160px;
+  padding: 10px 20px 10px 30px;
+  margin-top: 560px;
   border-radius: 0 5px 5px 0;
+  width: 190px;
+}
+
+.project-1 h2 {
+  font-size: 1.5rem;
 }
 
 .project-2{
   flex:1 1 40%;
-  min-height: 225px;
-  min-width: 400px;  
+  height: 250px;
+  width: 400px;  
 }
 
 .project-2 div {
   position: absolute;
   background-color: rgba(0, 0, 0, 0.8);
-  padding: 10px 20px 10px 20px;
-  margin-top: 160px;
+  padding: 5px 10px 5px 30px;
+  margin-top: 180px;
   border-radius: 0 5px 5px 0;
+  width: 155px;
 }
 
 .project-2 img{
   width: 100%;
-  height: 225px;
+  height: 245px;
+  object-fit: cover;
+  object-position: 0;
+  overflow: hidden;
+}
+
+.project-2 h2 {
+  font-size: 1.5rem;
 }
 
 .project-3{
   flex:1 1 40%;
-  min-width: 400px;
+  width: 400px;
+  height: 250px;
 }
 
-/* .project-3 div {
+.project-3 div {
   position: absolute;
   background-color: rgba(0, 0, 0, 0.8);
-  padding: 10px 20px 10px 20px;
-  margin-top: 160px;
+  padding: 5px 10px 5px 30px;
+  margin-top: 180px;
   border-radius: 0 5px 5px 0;
-} */
+  width: 275px;
+}
 
 .project-3 img{
+  width: 100%;
+  height: 245px;
+  object-fit: cover;
+  object-position: 0;
+  overflow: hidden;
+}
+
+.project-3 h2 {
+  font-size: 1.5rem;
 }
 
 .project-4{
   flex:1 1 40%;
-  min-height: 225px;
-  min-width: 400px;
+  height: 250px;
+  width: 400px;
 }
 
-/* .project-4 div {
+.project-4 div {
   position: absolute;
   background-color: rgba(0, 0, 0, 0.8);
-  padding: 10px 20px 10px 20px;
-  margin-top: 160px;
+  padding: 5px 10px 5px 30px;
+  margin-top: 180px;
   border-radius: 0 5px 5px 0;
- } */
+  width: 210px;
+}
 
+.project-4 img{
+  width: 100%;
+  height: 245px;
+  object-fit: fill;
+  object-position: 0;
+  overflow: hidden;
+}
+
+.project-4 h2 {
+  font-size: 1.5rem;
+}
 
 .project-5{
   flex:1 1 40%;
-  min-height: 225px;
-  min-width: 400px;
+  height: 250px;
+  width: 400px;
 }
 
 .project-5 div {
   position: absolute;
   background-color: rgba(0, 0, 0, 0.8);
-  margin-top: 160px;
+  padding: 5px 10px 5px 30px;
+  margin-top: 180px;
   border-radius: 0 5px 5px 0;
+  width: 180px;
+}
+
+.project-5 img{
+  width: 100%;
+  height: 245px;
+  object-fit: cover;
+  object-position: 0;
+  overflow: hidden;
+}
+
+.project-5 h2 {
+  font-size: 1.5rem;
 }
 
 .contact-me{
-  margin-top: auto;
+  position: relative;
+  margin-top: 10px;
   width: 100%;
   height: 100px;
-  background-color: white;
-  border: 2px solid var(--bordercolor);
+  background-color: black;
 }
 
- /* .contact-me div h1{
+ .contact-me div h1{
   position: absolute;
-  display: block;
-  padding-right: 20px;
+  padding-right: 15px;
   font-size: 2rem;
   width: 20%;
-  border-right: 2px solid var(--bordercolor);
-  height: 90px;
   text-align: right;
+  color: white;
+  padding-left: 5px;
 }
 
 .contact-me .nav-box{
@@ -279,6 +337,7 @@ a:hover{
   height: 100px;
   position: absolute;
   right: 0;
+  border-left: 2px solid var(--bordercolor);
 } 
   
 .contact-me nav{
@@ -286,9 +345,639 @@ a:hover{
   text-align: center;
   height: 100px;
   margin-top: 30px;
-
 }
 
 .contact-me nav a{
   padding-right: 20px;
-} */
+  color: white;
+  transition: 500ms;
+  font-family: 'Poiret One', cursive;
+  text-decoration: none;  
+}
+
+.contact-me nav a:hover{
+  font-size: 25px;
+}
+
+/* Small Screens */
+@media screen and (max-width: 910px){
+  .contact-me div h1{
+    position: absolute;
+    padding-right: 15px;
+    font-size: 1.5rem;
+    width: 20%;
+    text-align: right;
+    color: white;
+    padding-left: 0px;
+  }
+
+}
+
+/* iPads and Tablets */
+@media screen and (max-width: 768px){
+  body{
+    background-color: var(--dark);
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    min-height: 100%;
+  }
+  
+  h1, h2, h3{
+    font-family: 'Poiret One', cursive;
+    font-size: bold;
+    letter-spacing: 2px;
+  }
+  
+  .herb-header{
+    position: relative;
+    width: 100%;
+    background-color: var(--dark);
+    min-height: 80px;
+    /* padding: 6px 0 6px 0; */
+  }
+  
+  .herb-header h1{
+    display: block;
+    font-size: 2rem;
+    padding: 0 20px 0 20px;
+    background-color: var(--bordercolor);
+    color: black;
+    border-radius: 0 4px 4px 0;
+  }
+  
+  .herb-header nav{
+    position: absolute;
+    display: block;
+    right: 20px;
+    display: block;
+    color: white;
+    margin-top: 50px;
+    padding: 0;
+  }
+  
+  .herb-header nav a{
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+    transition: 500ms;
+    font-family: 'Poiret One', cursive;
+    font-size: 1rem;
+    letter-spacing: 2px;
+  }
+  
+  .herb-header nav a:hover{
+    font-size: 20px;
+  }
+
+  
+  .banner p{
+    padding: 4px;
+    position: absolute;
+    right: 20px;
+    bottom: 20px;
+    background-color: var(--bordercolor);
+    border-radius: 3px;
+    color: black;
+    font-family: 'Poiret One', cursive;
+  }
+  
+  .about-me{
+    position: relative;
+    margin-top: 10px;
+    width: 100%;
+    min-height: 200px;
+    overflow: hidden;
+  }
+  
+  .about-me div h1{
+    position: absolute;
+    font-size: 2rem;
+    width: 100%;
+    text-align: center;
+  }
+  
+  .about-me div p{
+    margin-top: 80px;
+    position: absolute;
+    right: 0;
+    width: 100%;
+    overflow: scroll;
+    height: 120px;
+    font-family: 'Times New Roman', Times, serif;
+    border: none;
+  }
+  
+  .work{
+    position: relative;
+    margin-top: 10px;
+    max-width: 100%;
+    height: 100%;
+  }
+  
+  .work div{
+    width: 100%;
+  }
+  
+  .work div h1{
+    position: absolute; 
+    padding-right: 0;
+    font-size: 2rem;
+    width: 100%;
+    text-align: center;
+    padding-left: 0;
+  }
+  
+  .work .work-flex{
+    margin-top: 40px;
+    right: 0;
+    padding: 0 20px 0 20px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 100%;  
+    gap: 5px;
+    border: none;
+  }
+  
+  .work-div a{
+    margin: 0 0 0 0;
+    max-width: 100%;
+    height: 100%;
+  }
+  
+  .work-div{
+    border: 2px solid var(--bordercolor); 
+    border-radius: 5px;
+  }
+  
+  .work-div:hover{
+    outline: none;
+    border-color: #dded9e;
+    box-shadow: 0 0 15px #aef226;
+  }
+  
+  .project-1{
+    min-height: 400px;
+    flex:1 1 100%; 
+  }
+  
+  .project-1 img{
+    width: 100%;
+    height: 400px;
+    object-fit: cover ;
+    object-position: center;
+  }
+  
+  .project-1 div {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.8);
+    padding: 10px 20px 10px 30px;
+    margin-top: 320px;
+    border-radius: 0 5px 5px 0;
+    width: 190px;
+  }
+  
+  .project-1 h2 {
+    font-size: 1.5rem;
+  }
+  
+  .project-2{
+    position: relative;
+    flex:1 1 80%;
+    height: 200px;
+    width: 400px;  
+  }
+  
+  .project-2 div {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.8);
+    padding: 5px 10px 5px 30px;
+    margin-top: 130px;
+    border-radius: 0 5px 5px 0;
+    width: 155px;
+  }
+  
+  .project-2 img{
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    overflow: hidden;
+  }
+  
+  .project-2 h2 {
+    font-size: 1.5rem;
+  }
+  
+  .project-3{
+    flex:1 1 40%;
+    width: 400px;
+    height: 200px;
+  }
+  
+  .project-3 div {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.8);
+    padding: 5px 10px 5px 30px;
+    margin-top: 130px;
+    border-radius: 0 5px 5px 0;
+    width: 275px;
+  }
+  
+  .project-3 img{
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    object-position: 0;
+    overflow: hidden;
+  }
+  
+  .project-3 h2 {
+    font-size: 1.5rem;
+  }
+  
+  .project-4{
+    flex:1 1 40%;
+    height: 200px;
+    width: 400px;
+  }
+  
+  .project-4 div {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.8);
+    padding: 5px 10px 5px 30px;
+    margin-top: 130px;
+    border-radius: 0 5px 5px 0;
+    width: 210px;
+  }
+  
+  .project-4 img{
+    width: 100%;
+    height: 200px;
+    object-fit: fill;
+    object-position: 0;
+    overflow: hidden;
+  }
+  
+  .project-4 h2 {
+    font-size: 1.5rem;
+  }
+  
+  .project-5{
+    flex:1 1 40%;
+    height: 200px;
+    width: 400px;
+    box-shadow: none;
+  }
+  
+  .project-5 div {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.8);
+    padding: 5px 10px 5px 30px;
+    margin-top: 130px;
+    border-radius: 0 5px 5px 0;
+    width: 180px;
+  }
+  
+  .project-5 img{
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    object-position: 0;
+    overflow: hidden;
+  }
+  
+  .project-5 h2 {
+    font-size: 1.5rem;
+  }
+  
+  .contact-me{
+    position: relative;
+    margin-top: 10px;
+    width: 100%;
+    height: 100px;
+    background-color: black;
+  }
+  
+   .contact-me div h1{
+    position: absolute;
+    padding-right: 15px;
+    font-size: 2rem;
+    width: 100%;
+    text-align: center;
+    color: white;
+    padding: 0;
+  }
+  
+  .contact-me .nav-box{
+    width: 100%;
+    height: 100px;
+    position: absolute;
+    right: 0;
+    border: none;
+    margin-top: 50px;
+  } 
+    
+  .contact-me nav{
+    display: block;
+    text-align: center;
+    height: 60px;
+    margin-top: 30px;
+  }
+  
+  .contact-me nav a{
+    padding-right: 20px;
+    color: white;
+    transition: 500ms;
+    font-family: 'Poiret One', cursive;
+    text-decoration: none;  
+  }
+  
+  .contact-me nav a:hover{
+    font-size: 25px;
+  }
+
+}
+
+
+/* Mobile Devices */
+@media screen and (max-width: 480px){
+
+  body{
+    background-color: var(--dark);
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    min-height: 100%;
+  }
+  
+  h1, h2, h3{
+    font-family: 'Poiret One', cursive;
+    font-size: bold;
+    letter-spacing: 2px;
+  }
+  
+  .herb-header nav a{
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+    transition: 500ms;
+    font-family: 'Poiret One', cursive;
+    font-size: .8rem;
+    letter-spacing: 2px;
+  }
+  
+  
+  .about-me{
+    position: relative;
+    margin-top: 10px;
+    width: 100%;
+    min-height: 200px;
+    overflow: hidden;
+  }
+  
+  .about-me div h1{
+    position: absolute;
+    font-size: 2rem;
+    width: 100%;
+    text-align: center;
+  }
+  
+  .about-me div p{
+    margin-top: 80px;
+    position: absolute;
+    right: 0;
+    width: 100%;
+    overflow: scroll;
+    height: 120px;
+    font-family: 'Times New Roman', Times, serif;
+    border: none;
+  }
+  
+  .work{
+    position: relative;
+    margin-top: 10px;
+    max-width: 100%;
+    height: 100%;
+  }
+  
+  .work div{
+    width: 100%;
+  }
+  
+  .work div h1{
+    position: absolute; 
+    padding-right: 0;
+    font-size: 2rem;
+    width: 100%;
+    text-align: center;
+    padding-left: 0;
+  }
+  
+  .work .work-flex{
+    margin-top: 40px;
+    right: 0;
+    padding: 0 20px 0 20px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 100%;  
+    gap: 5px;
+    border: none;
+  }
+  
+  .work-div a{
+    margin: 0 0 0 0;
+    max-width: 100%;
+    height: 100%;
+  }
+  
+  .work-div{
+    border: 2px solid var(--bordercolor); 
+    border-radius: 5px;
+  }
+  
+  .work-div:hover{
+    outline: none;
+    border-color: #dded9e;
+    box-shadow: 0 0 15px #aef226;
+  }
+  
+  .project-1{
+    min-height: 400px;
+    flex:1 1 100%; 
+  }
+  
+  .project-1 img{
+    width: 100%;
+    height: 400px;
+    object-fit: cover ;
+    object-position: center;
+  }
+  
+  .project-1 div {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.8);
+    padding: 10px 20px 10px 30px;
+    margin-top: 320px;
+    border-radius: 0 5px 5px 0;
+    width: 190px;
+  }
+  
+  .project-1 h2 {
+    font-size: 1.5rem;
+  }
+  
+  .project-2{
+    position: relative;
+    flex:1 1 80%;
+    height: 200px;
+    width: 400px;  
+  }
+  
+  .project-2 div {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.8);
+    padding: 5px 10px 5px 30px;
+    margin-top: 130px;
+    border-radius: 0 5px 5px 0;
+    width: 155px;
+  }
+  
+  .project-2 img{
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    overflow: hidden;
+  }
+  
+  .project-2 h2 {
+    font-size: 1.5rem;
+  }
+  
+  .project-3{
+    flex:1 1 40%;
+    width: 400px;
+    height: 200px;
+  }
+  
+  .project-3 div {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.8);
+    padding: 5px 10px 5px 30px;
+    margin-top: 130px;
+    border-radius: 0 5px 5px 0;
+    width: 275px;
+  }
+  
+  .project-3 img{
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    object-position: 0;
+    overflow: hidden;
+  }
+  
+  .project-3 h2 {
+    font-size: 1.5rem;
+  }
+  
+  .project-4{
+    flex:1 1 40%;
+    height: 200px;
+    width: 400px;
+  }
+  
+  .project-4 div {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.8);
+    padding: 5px 10px 5px 30px;
+    margin-top: 130px;
+    border-radius: 0 5px 5px 0;
+    width: 210px;
+  }
+  
+  .project-4 img{
+    width: 100%;
+    height: 200px;
+    object-fit: fill;
+    object-position: 0;
+    overflow: hidden;
+  }
+  
+  .project-4 h2 {
+    font-size: 1.5rem;
+  }
+  
+  .project-5{
+    flex:1 1 40%;
+    height: 200px;
+    width: 400px;
+    box-shadow: none;
+  }
+  
+  .project-5 div {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.8);
+    padding: 5px 10px 5px 30px;
+    margin-top: 130px;
+    border-radius: 0 5px 5px 0;
+    width: 180px;
+  }
+  
+  .project-5 img{
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    object-position: 0;
+    overflow: hidden;
+  }
+  
+  .project-5 h2 {
+    font-size: 1.5rem;
+  }
+  
+  .contact-me{
+    position: relative;
+    margin-top: 10px;
+    width: 100%;
+    height: 110px;
+    background-color: black;
+    margin-right: 10px;
+  }
+  
+   .contact-me div h1{
+    position: absolute;
+    font-size: 2rem;
+    width: 100%;
+    text-align: center;
+    color: white;
+    padding: 0;
+  }
+  
+  .contact-me .nav-box{
+    display: block;
+    width: 100%;
+    height: 100px;
+    position: absolute;
+    border: none;
+  } 
+    
+  .contact-me nav{
+    display: block;
+    height: 60px;
+    margin: 30px 0 0 20px;
+  }
+  
+  .contact-me nav a{
+    color: white;
+    transition: 500ms;
+    font-family: 'Poiret One', cursive;
+    text-decoration: none;  
+  }
+  
+  .contact-me nav a:hover{
+    font-size: 25px;
+  }
+
+}
