--- a/Assets/style.css
+++ b/Assets/style.css
@@ -954,7 +954,7 @@ img{
     width: 100%;
     height: 200px;
     object-fit: cover;
-    object-position: 0;
+    object-position: center;
     overflow: hidden;
   }
   
