--- a/assets/style.css
+++ b/assets/style.css
@@ -88,7 +88,6 @@ img{
   width: 310px;
   height: 310px;
   mix-blend-mode: luminosity ;
-  overflow: hidden; 
 }
 
 .banner p{
@@ -100,6 +99,7 @@ img{
   border-radius: 3px;
   color: black;
   font-family: 'Poiret One', cursive;
+  overflow: hidden;
 }
 
 .about-me{
@@ -126,9 +126,12 @@ img{
   padding-left: 20px;
   width: 80%;
   padding-right: 15px;
-  overflow: scroll;
   height: 120px;
+  overflow: scroll;
   font-family: 'Times New Roman', Times, serif;
+}
+.about-me div p::-webkit-scrollbar {
+  display: none;
 }
 
 .work{
@@ -197,9 +200,9 @@ img{
   position: absolute;
   background-color: rgba(0, 0, 0, 0.8);
   padding: 10px 20px 10px 30px;
-  margin-top: 560px;
+  margin-top: 570px;
   border-radius: 0 5px 5px 0;
-  width: 190px;
+  width: 290px;
 }
 
 .project-1 h2 {
@@ -359,19 +362,6 @@ img{
   font-size: 25px;
 }
 
-/* Small Screens */
-/* @media screen and (max-width: 910px){
-  .contact-me div h1{
-    position: absolute;
-    padding-right: 15px;
-    font-size: 1.5rem;
-    width: 20%;
-    text-align: right;
-    color: white;
-    padding-left: 0px;
-  }
-
-} */
 
 /* iPads and Tablets */
 @media screen and (max-width: 910px){
@@ -524,18 +514,21 @@ img{
   
   .project-1 img{
     width: 100%;
-    height: 400px;
-    object-fit: cover ;
-    object-position: center;
+    scale: 100%;
+    height: 450px;
+    object-fit: cover;
+    object-position: top;
+    overflow: hidden;
   }
   
   .project-1 div {
     position: absolute;
     background-color: rgba(0, 0, 0, 0.8);
     padding: 10px 0 10px 20px;
-    margin-top: 320px;
+    margin-top: 370px;
     border-radius: 0 5px 5px 0;
-    width: 200px;
+    width: 270px;
+    z-index: 1;
   }
   
   .project-1 div h2 {
@@ -695,7 +688,6 @@ img{
   .contact-me nav a:hover{
     font-size: 25px;
   }
-
 }
 
 
@@ -836,7 +828,7 @@ img{
   .project-1 img{
     width: 100%;
     height: 400px;
-    object-fit: cover ;
+    object-fit: cover;
     object-position: center;
   }
   
@@ -846,7 +838,7 @@ img{
     padding: 10px 20px 10px 10px;
     margin-top: 320px;
     border-radius: 0 5px 5px 0;
-    width: 180px;
+    width: 265px;
   }
   
   .project-1 h2 {
